--- a/game-genspark.html
+++ b/game-genspark.html
@@ -211,10 +211,11 @@
             <!-- Title -->
             <div class="text-center mb-8">
                 <h1 class="title-font text-4xl sm:text-5xl md:text-6xl lg:text-7xl text-white mb-4 wiggle">
-                    👾 The Great Task Battle!
+                    👾 ورك و ربح
                 </h1>
                 <p class="text-lg sm:text-xl text-white opacity-90">
-                    Révélez les défis un par un ! Le dernier joueur à cliquer gagne ! 🏆
+                    🏆🏆🏆 ! اكشف التحديات واحدًا تلو الآخر! آخر لاعب يضغط هو الفائز 
+
                 </p>
             </div>
 
